<?xml version="1.0"?>
<package format="2">
  <name>gtsam_catkin</name>
  <version>4.0.3</version>
  <description>gtsam_catkin</description>

  <maintainer email="jnordin@fyusion.com">Johan Nordin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>ninja-build</buildtool_depend>
  
  <depend>eigen_catkin</depend>
  <depend>boost</depend>
  
</package>
